clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_regex.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 125
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ \"$str\" =~ ^[0-9]+$ ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(StringMatchesRegex, Word(
                  value: "\"$str\"",
                  loc: "[location]",
                ), Word(
                  value: "^[0-9]+$",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
