clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_string_pattern.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 114
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ \"$str\" == *pattern* ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(StringExactlyMatchesPattern, Word(
                  value: "\"$str\"",
                  loc: "[location]",
                ), Word(
                  value: "*pattern*",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
