clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_string_zero_length.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 70
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -z \"$var\" ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: UnaryTest(StringHasZeroLength, Word(
                  value: "\"$var\"",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
