clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__extended_test__parse_extended_test_writable.snap
---
source: clash-brush-parser/src/parser/tests/extended_test.rs
assertion_line: 46
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -w file ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: UnaryTest(FileExistsAndIsWritable, Word(
                  value: "file",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
